# src/routes/videoRoutes.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const { searchVideos } = require("../controllers/videoController");
+
+const router = express.Router();
+
+router.get("/search", searchVideos);
+
+module.exports = router;
